<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="xposed_description">Use features introduced in Android N on devices running Lollipop and Marshmallow!</string>
    <string name="restart_systemui">Restart SystemUI</string>
    <string name="restart_systemui_message">Are you sure you want to restart the SystemUI?</string>
    <string name="restart_broadcast_sent">Restart broadcast sent</string>
    <string name="activity_about">About Android N-ify</string>
    <string name="about_author">Developed by @MrWasdennnoch</string>
    <string name="about_translator">Translated by @MrWasdennnoch</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="prefs_not_readable"><![CDATA[<b>Warning:</b> The preference file isn\'t readable by Xposed. Click for more info&#8230;]]></string>
    <string name="prefs_not_readable_description"><![CDATA[
        Xposed can\'t read the preference file of this module, default values will be used in hooks.
        There are several ways to fix this problem. Also note that this error pops up if you\'ve never
        opened the app before.<br><br>
        First, reboot the device (No soft reboot!).<br>
        If that doesn\'t help, try reinstalling the module.<br>
        If both attempts fail, ensure that your SELinux mode is set to <i>permissive</i>.
        <i>Enforcing</i> SELinux might block access to the preference file. In order to change the mode,
        use the app <tt>SELinuxModeChanger</tt> that you can download
        <a href="http://forum.xda-developers.com/showthread.php?t=2524485">in this XDA thread</a>.<br>
        If even that fails, you probably have to live with the default values, sorry :(
        ]]></string>
    <string name="automated_build_warning"><![CDATA[
        You\'re running on an automated build. Some parts of the module may break due to new changes.
        If you found any issue, <a href="https://github.com/wasdennnoch/AndroidN-ify/issues/new">open one on GitHub</a> if it doesn\'t already exists.<br><br>
        Remember to always attach Xposed logs when reporting bugs, and logcat in case of crashes.
        ]]></string>
    <string name="experimental_build_warning"><![CDATA[
        You\'re running on an experimental automated build. Some parts of the module may break due to new changes.
        If you found any issue, <a href="https://github.com/wasdennnoch/AndroidN-ify/issues/new">open one on GitHub</a> if it doesn\'t already exists.<br>
        This build contains <b>very experimental</b> features. Please search in XDA and GitHub before reporting any issues. Duplicate reports will be ignored and closed.<br><br>
        Remember to always attach Xposed logs when reporting bugs, and logcat in case of crashes.
        ]]></string>
    <string name="header_tweaks">Tweaks</string>
    <string name="header_app">App</string>
    <string name="app_theme_title">App theme</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_device">Device Default</string>
    <string name="hide_launcher_icon_title">Hide launcher icon</string>
    <string name="hide_launcher_icon">May require launcher restart</string>
    <string name="debug_log_title">Debug log</string>
    <string name="debug_log">Warning: Log-flooding</string>
    <string name="requires_android_version">Requires Android %1$s</string>
    <string name="not_activated">Module not activated</string>
    <string name="theme_colorPrimary">Primary color</string>
    <string name="header_lockscreen">Lock screen</string>
    <string name="header_settings">Settings</string>
    <string name="enable_settings_summaries_title">Settings summaries</string>
    <string name="enable_settings_summaries">Show the most important information directly in the dashboard</string>
    <string name="fix_sound_notif_tile_title">Fix "Sound &amp; notification" tile</string>
    <string name="fix_sound_notif_tile">Some ROMs combine the Sounds and Notifications tile. Enable to set the proper summary for this tile</string>
    <string name="enable_n_platlogo_title">N logo in easter egg</string>
    <string name="use_namey_mcnameface_title">Use \"Namey McNameface\" icon</string>
    <string name="disconnected">Disconnected</string>
    <string name="disabled">Disabled</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="data_usage_summary">%1$s of data used</string>
    <string name="display_summary">Adaptive brightness is %1$s</string>
    <string name="sound_summary">Ringer volume at %1$s</string>
    <string name="apps_summary" tools:ignore="PluralsCandidate">%1$d apps installed</string>
    <string name="storage_summary">%1$s of %2$s used</string>
    <string name="battery_summary">%1$s - approx. %2$s left</string>
    <string name="battery_charging_wireless">%1$s - Charging wirelessly</string>
    <string name="battery_charging_usb">%1$s - Charging on USB</string>
    <string name="battery_charging_ac">%1$s - Charging on AC</string>
    <string name="memory_summary">Currently %1$s of %2$s memory used</string>
    <string name="user_summary">Signed in as %1$s</string>
    <string name="location_on_power">ON / Power saving</string>
    <string name="location_on_device">ON / Device only</string>
    <string name="location_on_high">ON / High accuracy</string>
    <string name="print_summary" tools:ignore="PluralsCandidate">%1$d print jobs</string>
    <string name="store">Store</string>
    <string name="app_details">App details</string>
    <string name="install_source">App installed from %1$s</string>
    <string name="from_pm">App installed from Package Installer</string>
    <string name="header_recents">Recents</string>
    <string name="enable_recents_double_tap_title">Quick switch</string>
    <string name="enable_recents_double_tap">Double tap the recents key to switch to the last used app</string>
    <string name="alternative_double_tap_title">Alternative double tap detection</string>
    <string name="alternative_double_tap">Enable if Quick switch isn\'t working correctly</string>
    <string name="double_tap_speed_title">Double tap speed</string>
    <string name="recents_button_behavior_title">Recents button click behavior</string>
    <string name="recents_navigation_delay_title">Navigation delay</string>
    <string name="recents_navigation_delay">Time until the selected app gets focused</string>
    <string name="enable_large_recents">Large recent apps</string>
    <string name="enable_large_recents_summary">Only makes the recents cards full width, doesn\'t change the height</string>
    <string name="no_recents_image">Change \"no recents\" image</string>
    <string name="no_previous_recents">No recent items</string>
    <string name="recents_button_behavior_previous">Return to previous app</string>
    <string name="recents_button_behavior_current">Return to current app</string>
    <string name="recents_button_behavior_cycle">Cycle through apps</string>
    <string name="header_qs">Quick Settings</string>
    <string name="enable_notification_header">Style header</string>
    <string name="keep_bg_title">Unaltered backgrounds</string>
    <string name="keep_bg">Useful for themes that apply custom backgrounds</string>
    <string name="keep_header_bg">Header</string>
    <string name="keep_panel_bg">QS Panel</string>
    <string name="force_old_date_position">Force date next to time</string>
    <string name="force_old_date_position_summary">On screens smaller than a certain size the date gets displayed below the clock instead of next to it, only visible when expanding the QS panel. Enable to override this behavior</string>
    <string name="force_old_date_position_disabled_summary">Your device already supports the new date position</string>
    <string name="notification_header_qs_tiles_count">QS tiles to show</string>
    <string name="notification_header_qs_tiles_count_monitor">tiles</string>
    <string name="battery_tile_show_percentage">Show percentage in battery tile</string>
    <string name="battery_tile_show_percentage_summary">Show remaining battery percentage in the battery tile</string>
    <string name="enable_qs_editor">Enable QS editor</string>
    <string name="enable_qs_gutter">Enable QS gutter</string>
    <string name="alternative_qs_loading">Alternative QS loading method</string>
    <string name="alternative_qs_loading_summary">Use a different way to get the available QS tiles. Only use if you are missing tiles in the editor</string>
    <string name="inject_gb_tiles">Inject GravityBox tiles</string>
    <string name="inject_gb_tiles_summary">Enable if you want to add QS tiles provided by GravityBox</string>
    <string name="inject_gb_tiles_not_installed">GravityBox is not installed</string>
    <string name="allow_fancy_qs_transition">Fancy QS transition</string>
    <string name="enable_new_tile_click_behavior">New tile click behavior</string>
    <string name="enable_new_tile_click_behavior_summary">Clicking a tile in header will toggle it and clicking a tile in the panel will expand it</string>
    <string name="enable_large_first_row">Enlarge first row</string>
    <string name="enable_large_first_row_summary2">Makes the first two tiles appear large if supported</string>
    <string name="fix_stuck_inversion_title">Fix stuck inversion</string>
    <string name="fix_stuck_inversion">On some devices the inversion gets stuck when enabled. Click to force deactivation</string>
    <string name="hide_icons_title">Hide header items</string>
    <string name="hide_tuner_icon_title">Hide SystemUI Tuner icon</string>
    <string name="hide_edit_tiles_title">Hide edit tiles button</string>
    <string name="hide_edit_tiles_summary">This only hides the stock edit button!</string>
    <string name="hide_carrier_label_title">Hide carrier label</string>
    <string name="header_notifications">Notifications</string>
    <string name="notifications_change_style">Style Notifications</string>
    <string name="notification_dismiss_button_title">Change dismiss button</string>
    <string name="notification_dismiss_button">Show \"CLEAR ALL\" instead of dismiss icon</string>
    <string name="action_search">Search</string>
    <string name="notification_blacklisted_apps_title">Blacklisted apps</string>
    <string name="notification_blacklisted_apps">Use old notification style for these apps</string>
    <string name="notifications_custom_actions_color_title">Custom actions background color</string>
    <string name="notifications_custom_actions_color">Use a custom color as the background of the notification buttons</string>
    <string name="notifications_actions_color_title">Actions background color</string>
    <string name="header_experimental">Experimental</string>
    <string name="enable_experimental_features">Enable experimental features</string>
    <string name="enable_n_style_settings_dashboard">N style settings</string>
    <string name="enable_n_style_settings_dashboard_summary">Theme the settings dashboard to look like N</string>
    <string name="enable_settings_drawer">Enable settings drawer</string>
    <string name="fix_header_space_title">Fix huge space under qs header</string>
    <string name="reconfigure_notification_panel_title">Reconfigure notification panel layout hierarchy</string>
    <string name="enable_theming_title">Enable theming (UNFINISHED)</string>
    <string name="enable_bundled_notifications_title">Enable bundled notifications</string>
    <string name="bundled_notifications_collapsed_children_title">Maximum number of bundled notifications when group collapsed</string>
    <string name="bundled_notifications_expanded_children_title">Maximum number of bundled notifications when group expanded</string>
</resources>